force-app/main/default/objects/Timesheet_Item__c/Timesheet_Item__c.object-meta.xml
<CustomObject>
    <label>Timesheet Item</label>
    <nameField>
        <displayFormat>TSI-{0000}</displayFormat>
        <label>Timesheet Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>