force-app/main/default/objects/Timesheet_Item__c/fields/Hours_Text__c.field-meta.xml
<CustomField>
    <fullName>Hours_Text__c</fullName>
    <label>Hours Text</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>