force-app/main/default/objects/Timesheet_Item__c/fields/Logged_Date__c.field-meta.xml
<CustomField>
    <fullName>Logged_Date__c</fullName>
    <label>Logged Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>