force-app/main/default/objects/Timesheet_Item__c/fields/Minutes_Calc__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Calc__c</fullName>
    <formula>(VALUE(SUBSTITUTE(Hours_Text__c, RIGHT(Hours_Text__c, 3), &apos;&apos;)) * 60)
+ VALUE(RIGHT(Hours_Text__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>