force-app/main/default/objects/Timesheet_Item__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <label>Timesheet</label>
    <referenceTo>Timesheet__c</referenceTo>
    <relationshipLabel>Timesheet Items</relationshipLabel>
    <relationshipName>Timesheet_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>