force-app/main/default/objects/Timesheet_Item__c/validationRules/Hours_Text_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Text_Format</fullName>
    <active>true</active>
    <description>Hours text must be 0:00 format</description>
    <errorConditionFormula>NOT(REGEX( Hours_Text__c , &quot;[0-9]{1,5}:[0-5][0-9]&quot;))</errorConditionFormula>
    <errorMessage>Hours format is 0:00 max of 8 characters</errorMessage>
</ValidationRule>